exports[`consistent-test-filename > invalid(1): import {test} from 'node:test';\ntest(\"x\", () => {}); 1`] = `

Filename: foo.js

  1 | import {test} from 'node:test';
  2 | test("x", () => {});

`;

exports[`consistent-test-filename > invalid(1): import {test} from 'node:test';\ntest(\"x\", () => {}); 2`] = `

Message:
> 1 | import {test} from 'node:test';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | test("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^ Test file name \`foo.js\` does not match the required pattern \`\\.test\\.[cm]?[jt]sx?$\`.

`;

exports[`consistent-test-filename > invalid(2): import {test} from 'node:test';\ntest(\"x\", () => {}); 1`] = `

Filename: /project/src/foo.js

  1 | import {test} from 'node:test';
  2 | test("x", () => {});

`;

exports[`consistent-test-filename > invalid(2): import {test} from 'node:test';\ntest(\"x\", () => {}); 2`] = `

Message:
> 1 | import {test} from 'node:test';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | test("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^ Test file name \`foo.js\` does not match the required pattern \`\\.test\\.[cm]?[jt]sx?$\`.

`;

exports[`consistent-test-filename > invalid(3): import {test} from 'node:test';\ntest(\"x\", () => {}); 1`] = `

Filename: foo-test.js

  1 | import {test} from 'node:test';
  2 | test("x", () => {});

`;

exports[`consistent-test-filename > invalid(3): import {test} from 'node:test';\ntest(\"x\", () => {}); 2`] = `

Message:
> 1 | import {test} from 'node:test';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | test("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^ Test file name \`foo-test.js\` does not match the required pattern \`\\.test\\.[cm]?[jt]sx?$\`.

`;

exports[`consistent-test-filename > invalid(4): import {test} from 'node:test';\ntest(\"x\", () => {}); 1`] = `

Filename: foo.spec.js

  1 | import {test} from 'node:test';
  2 | test("x", () => {});

`;

exports[`consistent-test-filename > invalid(4): import {test} from 'node:test';\ntest(\"x\", () => {}); 2`] = `

Message:
> 1 | import {test} from 'node:test';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | test("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^ Test file name \`foo.spec.js\` does not match the required pattern \`\\.test\\.[cm]?[jt]sx?$\`.

`;

exports[`consistent-test-filename > invalid(5): import {test} from 'node:test';\ntest(\"x\", () => {}); 1`] = `

Filename: foo.test.js

Options:
- pattern: '\\.spec\\.js$'

Code:
  1 | import {test} from 'node:test';
  2 | test("x", () => {});

`;

exports[`consistent-test-filename > invalid(5): import {test} from 'node:test';\ntest(\"x\", () => {}); 2`] = `

Message:
> 1 | import {test} from 'node:test';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | test("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^ Test file name \`foo.test.js\` does not match the required pattern \`\\.spec\\.js$\`.

`;

exports[`consistent-test-filename > invalid(6): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", () => {}); 1`] = `

Filename: foo.js

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("x", () => {});

`;

exports[`consistent-test-filename > invalid(6): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", () => {}); 2`] = `

Message:
> 1 | import * as nodeTest from 'node:test';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | nodeTest.test("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test file name \`foo.js\` does not match the required pattern \`\\.test\\.[cm]?[jt]sx?$\`.

`;

exports[`consistent-test-filename > invalid(7): import {test} from 'node:test';\ntest(\"x\", (): void => {}); 1`] = `

Filename: foo.js

  1 | import {test} from 'node:test';
  2 | test("x", (): void => {});

`;

exports[`consistent-test-filename > invalid(7): import {test} from 'node:test';\ntest(\"x\", (): void => {}); 2`] = `

Message:
> 1 | import {test} from 'node:test';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | test("x", (): void => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Test file name \`foo.js\` does not match the required pattern \`\\.test\\.[cm]?[jt]sx?$\`.

`;
